<?xml version="1.0"?>
<package format="2">
  <name>lipm_motion</name>
  <version>1.0.0</version>
  <description>Generate Walking Gaits with the LIPM</description>
  <maintainer email="spiperakis@ics.forth.gr">Stylianos Piperakis</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>lipm_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>lipm_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>lipm_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
